--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Newsproject4</string>
+    <string name="app_name">NC NEWS</string>
     <string name="title_activity_navigation">navigation</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -10,14 +10,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_profile">Profile</string>
-    <string name="menu_logout">Log out</string>
-    <string name="menu_exit">Exit</string>
     <string name="menu_login">Login</string>
-    <string name="menu_signup">Sign Up</string>
 
-    <string name="forget"><i><u>Forgot password?</u></i></string>
-    <string name="sign_up"> <i><u>Sign up</u></i></string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
